--- a/Abstractions/UIConcept/UIConcept/ExampleUI_1.tt
+++ b/Abstractions/UIConcept/UIConcept/ExampleUI_1.tt
@@ -32,7 +32,7 @@
 	
 	void GenerateRoot()
 	{
-		//GenerateAbstraction(CurrentAbstraction);
+		GenerateAbstraction(CurrentAbstraction);
 	}
 	
 	void GenerateAbstraction(CaloomBaseType abstraction)
