Testing commit + sync with Mac

--- a/Apps/CaloomMVC/Views/_ViewStart.cshtml
+++ b/Apps/CaloomMVC/Views/_ViewStart.cshtml
@@ -4,6 +4,7 @@
 <script src="" type="text/javascript"></script>
 <script type="text/javascript" language="javascript">
 KEHVELI = {
+// Demo
     function ExampleClass() {
         Assert.isTrue(this instanceof ExampleClass);
         if (false === (this instanceof ExampleClass)) {
