corrected html to phtml
include didn't work. Changing agi_index.html into agi_index.phtml did
the trick (of course)

--- a/Apps/CaloomMVC/caloomhtml/UI/docs/agi_index.phtml
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/agi_index.phtml
@@ -390,7 +390,7 @@
    </div>
    <!-- Module Whom -->
 <!-- Module Worth-->
- <?php include 'blocks/w5WorthDefault.php'; ?>
+ <?php include 'blocks/w5WorthDefault.phtml'; ?>
 <!-- Module Whorth -->
 </div><!-- /clearfix -->
 </form>
