--- a/Apps/CaloomMVC/caloomhtml/UI/docs/modules/w5-worth-default.phtml
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/modules/w5-worth-default.phtml
@@ -1,3 +1,4 @@
+<!--w5WhorthDefault -->
 <h3>Worth</h3>
 <div class="inline-inputs">
    <h4>Select a price:</4>
@@ -21,3 +22,4 @@
     <input class="checkbox" type="checkbox" id="whatHowRent" name="service[whatHow][]" value="rent">
     <!--fee -->
 </div>
+<!--w5WhorthDefault -->
