default page view added
default-layout.txt includes default-navbar.txt default-head.txt
default-footer.txt

Next is removing bootstrap specific content and annotate further in
.txt and phtml files

--- a/Apps/CaloomMVC/caloomhtml/UI/docs/agi_index.phtml
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/agi_index.phtml
@@ -21,13 +21,12 @@
 <!-- span3 result-list -->	
 <?php include 'modules/result-list.txt' ?><!-- /span3 result-list -->
 </div><!-- /row-fluid -->
-
-</div><!-- /container-fluid -->	
-
-<hr class="soften" id="queries">
-
+<div class="row-fluid">
 <!-- followed -->
 <?php include 'modules/followed.txt' ?><!-- /followed -->
+</div>
+
+</div><!-- /container-fluid -->	
 
 <hr class="soften" id="about">
 
