changed .brand colour in default-navbar.txt as style addition

--- a/Apps/CaloomMVC/caloomhtml/UI/docs/assets/css/caloom-addition.css
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/assets/css/caloom-addition.css
@@ -8,6 +8,9 @@ body {
 }
 /* Tweak navbar brand link to be super sleek
 -------------------------------------------------- */
+.brand {
+	color: #8ac246;
+}
 /* Space out sub-sections more
 -------------------------------------------------- */
 /* Jumbotrons
