modularised default-navbar.txt added "default-" to modules name
made a default-modules dir from the previous module dir

--- a/Apps/CaloomMVC/caloomhtml/UI/docs/default-layouts/default-layout.phtml
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/default-layouts/default-layout.phtml
@@ -21,7 +21,7 @@
 </div><!-- /container -->
 
 <!-- Le javascript -->
-<?php include '../modules/le-javascript.txt' ?><!-- Le javascript -->
+<?php include '../default-modules/default-le-javascript.txt' ?><!-- Le javascript -->
 
 </body>
 </html>
