--- a/Apps/CaloomMVC/caloomhtml/UI/docs/default-layouts/default-map-list.phtml
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/default-layouts/default-map-list.phtml
@@ -8,17 +8,28 @@
 <!-- default-navbar.txt -->
 <?php include'default-navbar.txt' ?><!-- default-navbar.txt -->
 
-
 <div class="container"><!--the container class sets the width of the container and centers it -->
 <section id="gridSystem"><!--keep this ID as it adds a padding of 60px to the container -->
-<div class="row show-grid"><!-- show-grid is for display in the example only -->
-<div class="span12" style="height:400px; min-height:400px">Container</div><!-- custom height for display in the examples only -->
+<div class="row"><!-- show-grid is for display in the example only -->
+<?php include'../default-modules/default-map.txt' ?>
+<?php include'../default-modules/default-result-list.txt' ?>
 </div><!-- row -->
 </section><!-- section -->
+<div class="row-fluid">
+<!-- followed -->
+<?php include '../default-modules/default-followed.txt' ?><!-- /followed -->
+
+<hr class="soften" id="about">
+
+<!-- explanation -->
+<?php include '../default-modules/explanation.txt' ?><!-- /explanation -->
 
 <!-- default-footer.txt -->
 <?php include'default-footer.txt' ?><!-- default-footer.txt-->
 </div><!-- /container -->
+
+<!--Modals-->
+<?php include '../default-modules/default-modals.txt' ?><!--/Modals-->
 
 <!-- Le javascript -->
 <?php include '../default-modules/default-le-javascript.txt' ?><!-- Le javascript -->
