made modals to work in "water companies in colombo"

--- a/Apps/CaloomMVC/caloomhtml/UI/docs/default-layouts/default-map-list.phtml
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/default-layouts/default-map-list.phtml
@@ -9,20 +9,19 @@
 <?php include'default-navbar.txt' ?><!-- default-navbar.txt -->
 
 <div class="container"><!--the container class sets the width of the container and centers it -->
-<section id="gridSystem"><!--keep this ID as it adds a padding of 60px to the container -->
-<div class="row"><!-- show-grid is for display in the example only -->
+<section id="gridSystem">
+<div class="row">
 <?php include'../default-modules/default-map.txt' ?>
 <?php include'../default-modules/default-result-list.txt' ?>
 </div><!-- row -->
-</section><!-- section -->
-<div class="row-fluid">
+
 <!-- followed -->
 <?php include '../default-modules/default-followed.txt' ?><!-- /followed -->
 
-<hr class="soften" id="about">
-
 <!-- explanation -->
-<?php include '../default-modules/explanation.txt' ?><!-- /explanation -->
+<?php include '../default-modules/default-explanation.txt' ?><!-- /explanation -->
+
+</section><!-- section -->
 
 <!-- default-footer.txt -->
 <?php include'default-footer.txt' ?><!-- default-footer.txt-->
